# xrootd-snag

./: .gitignore  CMakeLists.txt  README.md
src/: XrdSnag.hh  XrdSnagConfig.cc  XrdSnagFile.cc  XrdSnagFileSystem.cc
